<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Forge</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_course_title">CourseIndexActivity</string>
    <string name="course_index_temp">This will be a list of courses</string>
    <string name="title_activity_add_course">AddCourseActivity</string>
    <string name="search_label">Forge</string>
    <string name="search_hint">Search course name or #</string>
    <string name="title_activity_search_course">SearchCourseActivity</string>
    <string name="title_activity_course_detail">CourseDetailActivity</string>
    <string name="title_activity_availability">Availablility Activity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_availability__fullscreen">Availibility Fullscreen</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="user_prefs_file_name">USER_PREFS</string>
    <string name="monday">0</string>
    <string name="tuesday">1</string>
    <string name="wednesday">2</string>
    <string name="thursday">3</string>
    <string name="friday">4</string>
    <string name="saturday">5</string>
    <string name="sunday">6</string>
    <string name="title_activity_forge_index">ForgeIndexActivity</string>

</resources>
